--- a/package.json
+++ b/package.json
@@ -5,20 +5,19 @@
   "repository": "jsdnxx/persistent-log",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node obj/example.js",
+    "start:example": "tsc && node obj/example.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.0.34",
-    "@types/node": "^6.0.52",
     "binary-split": "^1.0.3",
     "bs58": "^4.0.0",
     "express": "^4.14.0",
-    "fs-promise": "^1.0.0",
-    "ldjson-stream": "^1.2.1",
-    "new-stream": "^1.0.0",
-    "through2": "^2.0.3",
-    "touch": "^1.0.0"
+    "through2": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.0.34",
+    "@types/node": "^6.0.52"
   }
 }
